deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  namespace: w255
  labels:
    app: project-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project-deployment
  template:
    metadata:
      labels:
        app: project-deployment
    spec:
      containers:
        - name: project-prediction-container
          image: project:latest
          resources:
            requests:
              cpu: 200m
              memory: 700Mi
            limits:
              cpu: 1500m
              memory: 2Gi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
