deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: w255
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
      tier: backend
  template:
    metadata:
      labels:
        app: redis-server
        tier: backend
    spec:
      containers:
        - name: redis
          image: redis:6.2
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          command: ["redis-server"]
          ports:
            - containerPort: 6379
