patch-deployment-project-copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: project-prediction-container
          image: w255mids.azurecr.io/fayetitchenal/project:[TAG]
          resources:
            requests:
              cpu: 200m
              memory: 700Mi
            limits:
              cpu: 1500m
              memory: 2Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
