service-project.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: w255
  labels:
    app: project-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: project-deployment
