service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: w255
  labels:
    app: redis-service
    tier: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-server
    tier: backend
